--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
     <title>ToolBox - Image Converter</title>
     <!-- Favicon -->
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.svg') }}" type="image/svg+xml">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon-simple.svg') }}" type="image/svg+xml" media="(prefers-color-scheme: dark)">
     <link rel="alternate icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='images/favicon-192.png') }}">
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/favicon-192.png') }}">
-    <meta name="theme-color" content="#3498db">
+    <meta name="theme-color" content="#000000">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
